Fix padding on header, start info container
Fixed padding on header because it was too much on the sides, started
a general layout for info container section.

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     background: #1F2937;
     display: flex;
     flex-direction: column;
-    padding: 22px 300px 0;
+    padding: 22px 150px 0;
 }
 
 .header-index {
@@ -77,9 +77,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex: 0 0 500px;
+    flex: 0 1 500px;
     height: 200px;
+    min-width: 200px;
 }
+
 
 .hero-title {
     margin-right: 32px;
@@ -91,4 +93,16 @@ body {
     border-radius: 8px;
     border: none;
     margin-top: 12px;
+}
+
+.info-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.box {
+    width: 100px;
+    height: 100px;
+    border: #3882F6 3px solid;
 }
